# platanus-hack-26-ar-team-21

./: README.md  docker-compose.yml  platanus-hack-project.json  project-description.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_merchants.py  0002_add_products_sales_proposals_campaigns.py  0003_create_agent_runs.py  0004_proposals_assets_as_list.py  0005_add_notifications.py  0006_extend_campaigns_for_meta.py  0007_add_trigger_threshold_to_merchants.py
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  prompts.py  simple.py  state.py
backend/app/api/: auth.py  campaigns.py  products.py  proposals.py  sales.py  webhooks.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/integrations/: __init__.py  evolution_client.py  evolution_mock.py  meta_ads.py  meta_ads_client.py  meta_ads_mock.py  openrouter_client.py  openrouter_mock.py  shopify.py  shopify_mock.py
backend/app/publishers/: base.py  meta.py  meta_mock.py
backend/app/schemas/: campaigns.py  integrations.py  merchant.py  notifications.py  products.py  proposals.py  sales.py
backend/app/services/: analytics.py  image_gen.py  notifier.py  prompt_builder.py  proposal_actions.py  storage.py  sync.py  targeting.py  whatsapp_inbound.py
backend/tests/: test_health.py  test_whatsapp_inbound.py
front/: .dockerignore  .env.local.example  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
(+40 files in other folders)
